@@ -98,97 +98,57 @@
   (declare (si::c-local))
   (error "Too many arguments are supplied to defmacro-lambda-list."))
 
-(defun sys::destructure (vl whole macro &aux (*dl* nil) (*key-check* nil) (*arg-check* nil))
+(defun sys::destructure (vl whole macro)
   (declare (si::c-local))
-  (labels ((dm-vl (vl whole top &aux v allow-other-keys-p)
-	     (do*((optionalp) (restp) (keyp)
-		  (allow-other-keys-p) (auxp)
-		  (rest) (allow-other-keys) (keys) (no-check)
-		  (n (if top 1 0)) (ppn 0) (v))
-		 ((not (consp vl))
-		  (when vl
-		    (when restp (dm-bad-key '&rest))
-		    (push (list vl (dm-nth-cdr n whole)) *dl*)
-		    (setq no-check t))
-		  (when (and rest (not allow-other-keys))
-		    (push (cons rest keys) *key-check*))
-		  (unless no-check (push (cons whole n) *arg-check*))
-		  ppn)
-	       (declare (fixnum n ppn))
-	       (setq v (car vl))
-	       (cond
-		 ((eq v '&optional)
-		  (when optionalp (dm-bad-key '&optional))
-		  (setq optionalp t)
-		  (pop vl))
-		 ((and macro (eq v '&body))
-		  (when restp (dm-bad-key v))
-		  (dm-v (second vl) (dm-nth-cdr n whole))
-		  (setq restp t optionalp t no-check t)
-		  (setq vl (cddr vl))
-		  (setq ppn (if top (1- n) n)))
-		 ((or (eq v '&rest) (eq v '&body))
-		  (when restp (dm-bad-key v))
-		  (dm-v (second vl) (dm-nth-cdr n whole))
-		  (setq restp t optionalp t no-check t)
-		  (setq vl (cddr vl)))
-		 ((eq v '&key)
-		  (when keyp (dm-bad-key '&key))
-		  (setq rest (gensym))
-		  (push (list rest (dm-nth-cdr n whole)) *dl*)
-		  (setq keyp t restp t optionalp t no-check t)
-		  (pop vl))
-		 ((eq v '&allow-other-keys)
-		  (when (or (not keyp) allow-other-keys-p)
-		    (dm-bad-key '&allow-other-keys))
-		  (setq allow-other-keys-p t)
-		  (setq allow-other-keys t)
-		  (pop vl))
-		 ((eq v '&aux)
-		  (when auxp (dm-bad-key '&aux))
-		  (setq auxp t allow-other-keys-p t keyp t restp t optionalp t)
-		  (pop vl))
-		 (auxp
-		  (let (x (init nil))
-		    (cond ((symbolp v) (setq x v))
-			  (t (setq x (car v))
-			     (unless (endp (cdr v)) (setq init (second v)))))
-		    (dm-v x init))
-		  (pop vl))
-		 (keyp
-		  (let ((temp (gensym)) x k (init nil) (sv nil))
-		    (cond ((symbolp v) (setq x v
-					     k (intern (string v) 'keyword)))
-			  (t (if (symbolp (car v))
-				 (setq x (car v)
-				       k (intern (string (car v)) 'keyword))
-				 (setq x (cadar v) k (caar v)))
-			     (unless (endp (cdr v))
-			       (setq init (second v))
-			       (unless (endp (cddr v))
-				 (setq sv (caddr v))))))
-		    (dm-v temp `(search-keyword ,rest ',k))
-		    (dm-v x `(if (eq ,temp 'failed) ,init ,temp))
-		    (when sv (dm-v sv `(not (eq ,temp 'failed))))
-		    (push k keys))
-		  (pop vl))
-		 (optionalp
-		  (let (x (init nil) (sv nil))
-		    (cond ((symbolp v) (setq x v))
-			  (t (setq x (car v))
-			     (unless (endp (cdr v))
-			       (setq init (second v))
-			       (unless (endp (cddr v))
-				 (setq sv (caddr v))))))
-		    (dm-v x `(if ,(dm-nth-cdr n whole) ,(dm-nth n whole) ,init))
-		    (when sv (dm-v sv `(not (null ,(dm-nth-cdr n whole))))))
-		  (incf n)
-		  (pop vl))
-		 (t (dm-v v `(if ,(dm-nth-cdr n whole)
-			      ,(dm-nth n whole)
-			      (dm-too-few-arguments)))
-		    (incf n)
-		    (pop vl)))))
+  (labels ((dm-vl (vl whole macro)
+	     (let ((n (if macro 1 0))
+		   (ppn 0)
+		   (no-check nil)
+		   all-keywords)
+	       (multiple-value-bind (reqs opts rest allow-other-keys keys auxs)
+		   (si::process-lambda-list vl (if macro 'macro 'destructuring-bind))
+		 (dolist (v (cdr reqs))
+		   (dm-v v `(if ,(dm-nth-cdr n whole)
+			     ,(dm-nth n whole)
+			     (dm-too-few-arguments)))
+		   (incf n))
+		 (dotimes (i (pop opts))
+		   (let* ((x (first opts))
+			  (init (second opts))
+			  (sv (third opts)))
+		     (setq opts (cdddr opts))
+		     (dm-v x `(if ,(dm-nth-cdr n whole) ,(dm-nth n whole) ,init))
+		     (when sv (dm-v sv `(not (null ,(dm-nth-cdr n whole)))))
+		     (incf n)))
+		 (when rest
+		   (dm-v (setq rest (first rest)) (dm-nth-cdr n whole))
+		   (setq no-check t
+			 rest nil)
+		   (when (and (null (last vl 0)) (member '&body vl))
+		     (setq ppn (if macro (1- n) n))))
+		 (dotimes (i (pop keys))
+		   (unless rest
+		     (setq rest (gensym))
+		     (dm-v rest (dm-nth-cdr n whole))
+		     (setq no-check t))
+		   (let* ((temp (gensym))
+			  (k (first keys))
+			  (v (second keys))
+			  (init (third keys))
+			  (sv (fourth keys)))
+		     (setq keys (cddddr keys))
+		     (dm-v temp `(search-keyword ,rest ',k))
+		     (dm-v v `(if (eq ,temp 'failed) ,init ,temp))
+		     (when sv (dm-v sv `(not (eq ,temp 'failed))))
+		     (push k all-keywords)))
+		 (do ((l auxs (cddr l))) ((endp l))
+		   (let ((v (first l))
+			 (init (second l)))
+		     (dm-v v init)))
+		 (when (and rest (not allow-other-keys))
+		   (push (cons rest all-keywords) *key-check*))
+		 (unless no-check (push (cons whole n) *arg-check*)))
+	       ppn))
 
 	   (dm-v (v init)
 	     (cond ((symbolp v)
@@ -229,7 +189,10 @@
   (cond ((listp vl))
         ((symbolp vl) (setq vl (list '&rest vl)))
         (t (error "The destructuring-lambda-list ~s is not a list." vl)))
-  (let ((ppn (dm-vl vl whole macro)))
+  (let* ((*dl* nil)
+	 (*key-check* nil)
+	 (*arg-check* nil)
+	 (ppn (dm-vl vl whole macro)))
     (values ppn (nreverse *dl*) *key-check* *arg-check*))))
 
 ;;; valid lambda-list to DEFMACRO is:
